deploy/staging/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog-view-api
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: 'on'
    nginx.ingress.kubernetes.io/limit-rate-after: '15729'
    nginx.ingress.kubernetes.io/limit-rate: '128'
    nginx.ingress.kubernetes.io/limit-rpm: '10'
    nginx.ingress.kubernetes.io/limit-burst-multiplier: '2'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '60'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '60'
    nginx.ingress.kubernetes.io/limit-whitelist: '10.0.0.0/8'
    nginx.ingress.kubernetes.io/server-snippet: |
      server_tokens off;
      location ~ ^/(ping|ready|prometheus) {
        deny all;
        return 404;
      }
spec:
  ingressClassName: nginx
  rules:
    - host: catalog-view.api.staging.fellesdatakatalog.digdir.no
      http:
        paths:
          - backend:
              service:
                name: catalog-view-api
                port:
                  number: 8080
            path: /
            pathType: Prefix
